--- a/Resources/FirebaseTestnet/GoogleService-Info.plist
+++ b/Resources/FirebaseTestnet/GoogleService-Info.plist
@@ -19,18 +19,20 @@
 	<key>STORAGE_BUCKET</key>
 	<string>beamwallet-dbe7c.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:275726352179:ios:f0ea0895016205a1</string>
 	<key>DATABASE_URL</key>
 	<string>https://beamwallet-dbe7c.firebaseio.com</string>
+	<key>FirebaseScreenReportingEnabled</key>
+	<false/>
 </dict>
 </plist>
