--- a/Resources/InfoMasternet.plist
+++ b/Resources/InfoMasternet.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2</string>
+	<string>2.3</string>
 	<key>CFBundleVersion</key>
-	<string>10</string>
+	<string>5</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -57,6 +57,8 @@
 	<string>This app requires Face ID permission to authenticate using Face recognition</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>SFProText-Medium.ttf</string>
+		<string>SFProText-Regular.ttf</string>
 		<string>ProximaNova-Bold.ttf</string>
 		<string>ProximaNova-Regular.ttf</string>
 		<string>SF-Pro-Display-Bold.otf</string>
