--- a/Resources/InfoTestnet.plist
+++ b/Resources/InfoTestnet.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2</string>
+	<string>2.3</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -30,7 +30,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>14</string>
+	<string>7</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -70,6 +70,8 @@
 	<string>This app requires Face ID permission to authenticate using Face recognition</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>SFProText-Regular.ttf</string>
+		<string>SFProText-Medium.ttf</string>
 		<string>ProximaNova-Bold.ttf</string>
 		<string>ProximaNova-Regular.ttf</string>
 		<string>SF-Pro-Display-Bold.otf</string>
