Addresses/contacts screens redesign #227 Rework choose categories screen (for multi-choice) #238

--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -132,5 +132,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Provide gallery access to select QR code</string>
 </dict>
 </plist>
