--- a/Resources/InfoTestnet.plist
+++ b/Resources/InfoTestnet.plist
@@ -30,7 +30,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>11</string>
+	<string>13</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -70,6 +70,8 @@
 	<string>This app requires Face ID permission to authenticate using Face recognition</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Save your QR Code</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Provide gallery access to select QR code</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SFProText-Regular.ttf</string>
