--- a/Resources/InfoMasternet.plist
+++ b/Resources/InfoMasternet.plist
@@ -56,7 +56,9 @@
 	<key>NSFaceIDUsageDescription</key>
 	<string>This app requires Face ID permission to authenticate using Face recognition</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Save your QR Code</string>
+	<string>Save transaction details and scan QR-codes from the photos</string>
+	<key>NSPhotoLibraryUsageDescription - 2</key>
+	<string>Provide gallery access to select QR code</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SFProText-Regular.ttf</string>
