--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -191,5 +191,16 @@
 		</dict>
 		<dict/>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.mw.beam.beamwalletiOSMainnet</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>bmwallet</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
