--- a/Resources/InfoTestnet.plist
+++ b/Resources/InfoTestnet.plist
@@ -55,7 +55,7 @@
 			<string>com.mw.beam.beamwalletiOS</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>beamwallet</string>
+				<string>bmwallettestnet</string>
 			</array>
 		</dict>
 	</array>
@@ -174,6 +174,8 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UISupportsDocumentBrowser</key>
+	<false/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>UTExportedTypeDeclarations</key>
@@ -199,7 +201,5 @@
 		</dict>
 		<dict/>
 	</array>
-	<key>UISupportsDocumentBrowser</key>
-	<false/>
 </dict>
 </plist>
