--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -48,6 +48,17 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.mw.beam.beamwalletiOSMainnet</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>bmwallet</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>Fabric</key>
@@ -76,6 +87,8 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<false/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -190,17 +203,6 @@
 			</dict>
 		</dict>
 		<dict/>
-	</array>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>com.mw.beam.beamwalletiOSMainnet</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>bmwallet</string>
-			</array>
-		</dict>
 	</array>
 </dict>
 </plist>
