--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -142,6 +142,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
